--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,9 @@
     <color name="status_bar_color">#ffffff</color>
     <color name="white">#ffffff</color>
 
+    <color name="startcolor">#50C81AFA</color>
+    <color name="endcolor">#907529FD</color>
+
+    <color name="sendCode">#B22222</color>
+
 </resources>
