--- a/app/src/main/res/layout/news_item_layout.xml
+++ b/app/src/main/res/layout/news_item_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
     >
 
     <com.wang.avi.AVLoadingIndicatorView
@@ -14,7 +15,6 @@
         android:visibility="visible"
         app:indicatorColor="#B22222"
         app:indicatorName="LineScalePulseOutIndicator"/>
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/top_recyclerview"
