--- a/app/src/main/res/layout/news_item_layout.xml
+++ b/app/src/main/res/layout/news_item_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
     >
 
     <com.wang.avi.AVLoadingIndicatorView
@@ -16,11 +16,17 @@
         app:indicatorColor="#B22222"
         app:indicatorName="LineScalePulseOutIndicator"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/top_recyclerview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/top_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/top_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </RelativeLayout>
