--- a/app/src/main/res/layout/news_footview_item.xml
+++ b/app/src/main/res/layout/news_footview_item.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tips"
+    <LinearLayout
+        android:id="@+id/ll_footview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/y30"
         android:gravity="center"
-        android:padding="30dp"
-        android:textSize="15sp"
-        android:layout_marginBottom="1dp"/>
+        android:orientation="horizontal">
 
-</LinearLayout>
+        <com.wang.avi.AVLoadingIndicatorView
+            style="@style/AVLoadingIndicatorView"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            app:indicatorColor="#B22222"
+            app:indicatorName="PacmanIndicator"/>
+
+        <TextView
+            android:id="@+id/tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="nihao"
+            android:textSize="15sp"/>
+    </LinearLayout>
+
+</RelativeLayout>
