--- a/app/src/main/res/layout/videofragment_layout.xml
+++ b/app/src/main/res/layout/videofragment_layout.xml
@@ -3,12 +3,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_video"
-        android:scrollbars="none"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
-
+<TextView
+    android:text="VIDEO"
+    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 </LinearLayout>
